--- a/app/views/flights/_available_flights.html.erb
+++ b/app/views/flights/_available_flights.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="available-parent">
   <div class="col s10 offset-s2" id="available">
-    <form class="" action="<%= book_flight_path %>" method="get">
+    <form class="" action="<%= new_booking_path %>" method="get">
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
       <table class="striped responsive-table centered">
         <thead>
