--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for booking do |f| %>
+<%= form_for booking, :url => { :action => :confirm_booking } do |f| %>
 <% if booking.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(booking.errors.count, "error") %>
