--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -1,3 +1,12 @@
 // Place all the styles related to the bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#search {
+  border: none;
+  outline: none;
+  box-shadow: none;
+}
+
+input:-webkit-autofill {
+  background-color: #fff;
+}
