--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for booking, :url => { :action => :confirm_booking } do |f| %>
+<%= form_for booking do |f| %>
 <% if booking.errors.any? %>
 <div id="error_explanation">
   <h2><%= pluralize(booking.errors.count, "error") %>
@@ -11,6 +11,9 @@
   </ul>
 </div>
 <% end %>
+<div class="field">
+  <%= f.hidden_field :user_id %>
+</div>
 <div class="field">
   <%= f.label :flight_id %>
   <br/>
