--- a/app/assets/stylesheets/flights.scss
+++ b/app/assets/stylesheets/flights.scss
@@ -3,16 +3,21 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #preferences {
   position: relative;
+  height: 20%;
 }
 
-#available-parent {
-  height: 90%;
+#results {
+  height: 80%;
 }
 
-#available {
-  height: 100%;
+#option-fields {
+  margin-top: 90px;
+}
+
+#available-container {
+  height: 80%;
   margin-top: 20px;
-  margin-left: 10%;
+  margin-left: 70px;
   overflow-y: auto;
 }
 
