--- a/app/views/bookings/_past_bookings.html.erb
+++ b/app/views/bookings/_past_bookings.html.erb
@@ -1,5 +1,5 @@
 <div class="row" id="available-parent">
-  <div class="col s10 offset-s2" id="available">
+  <div class="col s10 offset-s1" id="available">
     <table class="striped responsive-table centered">
       <thead>
         <tr>
@@ -32,6 +32,9 @@
                 <li><%= passenger.passport_number %></li>
                 <% end %>
               </ul>
+            </td>
+            <td>
+              <%= link_to 'DELETE', booking, method: :delete, data: { confirm: 'Are you sure?' }, class: "btn-floating btn-large waves-effect waves-light blue" %>
             </td>
           </tr>
           <% end %>
