--- a/app/views/bookings/edit.html.erb
+++ b/app/views/bookings/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Project</h1>
 
-<%= render 'form', project: @project %>
+<%= render 'form', booking: @booking %>
 
-<%= link_to 'Show', @project %> |
-<%= link_to 'Back', projects_path %>
+<%= link_to 'Show', @booking %> |
+<%= link_to 'Back', bookings_path %>
