--- a/app/views/users/signup.html.erb
+++ b/app/views/users/signup.html.erb
@@ -1,7 +1,6 @@
 <div class="row" id="signup-page">
   <form class="col s12 z-depth-6 card-panel" id="new-user" action="/users" method="post">
     <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
-    <input type="hidden" name="role_id" value="2">
     <div class="row">
       <div class="input-field col s4">
         <i class="material-icons prefix">assignment_ind</i>
@@ -35,7 +34,7 @@
 
     <div class="row">
       <div class="col s12">
-        <button name="button" type="submit" class="submit btn waves-effect blue">Create account
+        <button type="submit" class="submit btn waves-effect blue">Create account
           <i class="material-icons right">send</i>
         </button>
       </div>
