Migrate db from sqlite to postgres

--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -1,6 +1,10 @@
 // Place all the styles related to the bookings controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+#search-parent {
+  margin-top: 90px;
+}
+
 #search {
   border: none;
   outline: none;
