--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -36,7 +36,7 @@ nav, footer.page-footer {
 }
 
 #header {
-  height: 10%;
+  height: 5%;
   width: 100%;
 }
 
@@ -59,4 +59,18 @@ nav, footer.page-footer {
 .footer-link {
   display:inline;
   margin: 3px;
+}
+
+#social {
+  float: left;
+}
+
+#more-information {
+  float: right;
+}
+
+@media only screen and (min-width: 993px) {
+  nav a.button-collapse {
+    display: block;
+  }
 }
