--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -40,5 +40,12 @@
 }
 
 #login-details, #new-user {
-  margin-top: 160px;
+  margin-top: 90px;
+}
+
+#user-details {
+  margin-left: auto;
+  margin-right: auto;
+  width: 40%;
+  float: none !important;
 }
