--- a/app/views/bookings/_search_booking.html.erb
+++ b/app/views/bookings/_search_booking.html.erb
@@ -1,10 +1,10 @@
 <div class="row" id="search-booking">
-  <div class="col s10 offset-s2">
+  <div class="col s4 offset-s4">
     <form action="<%= search_booking_path %>" method="get">
-      <div class="search search-wrapper card">
+      <div class="search search-wrapper card" id="search-parent">
         <input placeholder="Booking code" name="booking_code" id="search" type="text" class="validate">
       </div>
-      <button class="btn-floating btn-large waves-effect waves-light blue" col s2"" type="submit" name="action">
+      <button class="btn-floating btn-large waves-effect waves-light blue" type="submit" name="action">
         <i class="material-icons">search</i>
       </button>
     </form>
