--- a/app/views/bookings/new.html.erb
+++ b/app/views/bookings/new.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="new-reservation">
   <div class="col s10 offset-s1 card-panel" id="option-fields">
     <%= render 'form', booking: @booking %>
-    <%= link_to 'Back', bookings_path %>
+    <%= link_to 'Back', bookings_path, class: "btn waves-effect waves-light blue back" %>
   </div>
 </div>
