--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -3,6 +3,9 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #search-parent {
   margin-top: 90px;
+  margin-right: 10px;
+  padding-right: 50px;
+  display: inline-flex;
 }
 
 #search {
@@ -18,4 +21,32 @@ input:-webkit-autofill {
 #new-reservation {
   height: 90%;
   width: 100%;
+  overflow-y: auto;
+}
+
+.align {
+  text-align: center;
+}
+
+.float-left {
+  float: left !important;
+}
+
+.float-right {
+  float: right !important;
+}
+
+.create-booking {
+  display: inherit !important;
+  margin-top: 10px;
+  margin-bottom: 15px !important;
+}
+
+.back {
+  display: inherit !important;
+  margin-bottom: 15px !important;
+}
+
+.remove {
+  margin-bottom: 10px;
 }
