--- a/app/views/bookings/_confirm_form.html.erb
+++ b/app/views/bookings/_confirm_form.html.erb
@@ -29,13 +29,13 @@
   <br/>
   <%= f.email_field :email, readonly: true %>
 </div>
-<h5>Passengers</h5>
+<h6 class="align">Passengers</h6>
 <div id='passengers'>
   <%= f.fields_for :passengers do |passenger| %>
   <%= render 'confirm_passengers', :f => passenger %>
   <% end %>
 </div>
 <div class="actions">
-  <%= f.submit "CONFIRM"%>
+  <%= f.submit "CONFIRM", class: "btn waves-effect waves-light blue create-booking"%>
 </div>
 <% end %>
