--- a/app/views/bookings/_passenger_fields.html.erb
+++ b/app/views/bookings/_passenger_fields.html.erb
@@ -7,5 +7,5 @@
     <%= f.label :passport_number %>
     <%= f.text_field :passport_number %>
   </div>
-  <%= link_to_remove_association "remove passenger", f %>
+  <%= link_to_remove_association "remove passenger", f, class: "btn waves-effect waves-light blue remove" %>
 </div>
