--- a/app/views/bookings/confirm_booking.html.erb
+++ b/app/views/bookings/confirm_booking.html.erb
@@ -1,6 +1,6 @@
 <div class="row" id="new-reservation">
   <div class="col s10 offset-s1 card-panel" id="option-fields">
     <%= render 'confirm_form', booking: @booking %>
-    <%= link_to 'Back', root_path %>
+    <%= link_to 'Back', root_path, class: "btn waves-effect waves-light blue back" %>
   </div>
 </div>
