--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
       <div class="navbar-fixed">
         <nav>
           <div class="nav-wrapper">
-            <a href="#" class="brand-logo center">flightset</a>
+            <a href="<%= root_path %>" class="brand-logo center">flightset</a>
             <a href="#" data-activates="slide-out" class="button-collapse" id="menu">
               <i class="material-icons">menu</i>
             </a>
