--- a/app/views/bookings/_search_results.html.erb
+++ b/app/views/bookings/_search_results.html.erb
@@ -16,7 +16,7 @@
       <tbody>
         <div class="row">
 
-          <% @bookings.each do |booking| %>
+          <% @booking.each do |booking| %>
           <tr>
             <td><%= booking.booking_code %></td>
             <td><%= booking.email %></td>
@@ -38,6 +38,6 @@
         </div>
       </tbody>
     </table>
-    <%=link_to "BACK", "/", :class=>"btn waves-effect waves-light blue"%>
+    <%=link_to "BACK", "/", :class=>"btn waves-effect waves-light blue back"%>
   </div>
 </div>
