--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -39,8 +39,8 @@
   width: 70%;
 }
 
-#login-details, #new-user {
-  margin-top: 90px;
+#login-details, .new-user {
+  margin-top: 90px !important;
 }
 
 #user-details {
