--- a/app/assets/stylesheets/bookings.scss
+++ b/app/assets/stylesheets/bookings.scss
@@ -40,6 +40,8 @@ input:-webkit-autofill {
   display: inherit !important;
   margin-top: 10px;
   margin-bottom: 15px !important;
+  background: none !important;
+  border: none !important;
 }
 
 .back {
