Add classes to button submit

--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -43,7 +43,7 @@
     <%= link_to_add_association 'add passenger', f, :passengers, class: "btn waves-effect waves-light blue" %>
   </div>
 </div>
-<div class="actions btn waves-effect waves-light blue create-booking">
-  <%= f.submit "CREATE BOOKING"%>
+<div class="actions">
+  <%= f.submit "CREATE BOOKING", class: "btn waves-effect waves-light blue create-booking" %>
 </div>
 <% end %>
