--- a/app/views/flights/_available_flights.html.erb
+++ b/app/views/flights/_available_flights.html.erb
@@ -1,4 +1,13 @@
-<form class="" action="<%= new_booking_path %>" method="get">
+<% if flash[:notice] %>
+<div class="row margin">
+  <div class="input-field col s12">
+    <p>
+      <%= flash[:notice] %>
+    </p>
+  </div>
+</div>
+<% else %>
+<form action="<%= new_booking_path %>" method="get">
   <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
   <table class="striped responsive-table centered">
     <thead>
@@ -12,7 +21,6 @@
     </thead>
     <tbody>
       <div class="row">
-
         <% @flights.each do |flight| %>
         <tr>
           <td><%= flight.airline_name %></td>
@@ -20,7 +28,7 @@
           <td><%= flight.arrival_date %></td>
           <td>$<%= flight.cost %></td>
           <td>
-            <input name="flight_group" type="radio" value="<%= flight.id %>"/>
+            <input name="flight_group" type="radio" value="<%= flight.id %>" class="validate" required/>
           </td>
         </tr>
         <% end %>
@@ -29,9 +37,10 @@
   </table>
   <div class="container row">
     <div class="col s10 offset-s4">
-      <button class="btn waves-effect waves-light blue" type="submit" name="action">Select flight
+      <button class="btn waves-effect waves-light blue" type="submit" name="action" id="select-flight">Select flight
         <i class="material-icons right">send</i>
       </button>
     </div>
   </div>
 </form>
+<% end %>
