Concentrate inspection in main-nav

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,7 +31,7 @@
                 <a href="<%= manage_bookings_path %>">Manage bookings</a>
               </li>
             </ul>
-            <ul class="right hide-on-med-and-down">
+            <ul class="right hide-on-med-and-down main-nav">
               <% if current_user %>
               <li class="top-right">
                 <a href="<%= user_path(current_user.id) %>" class="top-right">
